# echelon0

./: Cargo.toml  README.md
src/: echelon0.rs  input.rs  lib.rs  macros.rs  main.rs  parser.rs  reader.rs  rule.rs  runner.rs
src/config/: ast.rs  compile.rs  compiler.rs  mod.rs  parse.rs  parser.rs  visit.rs
src/config/tests/assets/: simplest.conf
src/parser/: mod.rs  rule.rs
src/pipeline/: filter_section.rs  input_section.rs  mod.rs  output_section.rs  pipeline.rs
src/plugin/: factory.rs  filter.rs  input.rs  mod.rs  output.rs
tests/assets/config/: comments.conf
