[package]
name = "echelon0"
version = "0.1.0"
authors = ["Ivan Velichko <iximiuz@gmail.com>"]

[dependencies]
chrono = "0.2"
log = "0.3"
env_logger = "0.3"
getopts = "0.2"
regex = "0.1"
serde = "0.8"
serde_json = "0.8"

[dependencies.monstrio]
version = "0.1.2"
features = ["glob"]
# path = "../../crates.rs/monstrio"
