[package]
name = "echelon0"
version = "0.1.0"
authors = ["Ivan Velichko <iximiuz@gmail.com>"]

[dependencies]
env_logger = "0.3"
# getopts = "0.2"
log = "0.3"
regex = "0.1"

[dependencies.nom]
version = "^2.0.1"
# features = ["verbose-errors"]

# [dependencies.monstrio]
# version = "0.1.2"
# features = ["glob"]
# path = "../../crates.rs/monstrio"

[[bin]]
name = "echelon0"
doc = false
